<resources>
	<string name="app_name">AirlinesFinder</string>
	<string name="urlairlines_text">Airlines Manager 2</string>
	<string name="urlairlines">http://www.airlines-manager.com/</string>
	<string name="urlairlinesforum">http://forum.airlines-manager.com/</string>
	<string name="urlairlinesforum_text">Forum Airlines Manager 2</string>
	<string name="AirlinesFinder">Airlines Finder</string>
	<string name="AirlinesFinderStart">Commencer</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_setting_research">Options pour la recherche</string>
	<string name="hubschoix">Choix du HUB (Code IATA) :</string>
	<string name="hubsID">ID de votre HUB :</string>
	<string name="Continents">Continent d\'arrivée</string>
	<string name="AvionList">Choix de l\'avion</string>
	<string name="hello_world">Hello world!</string>
	<string name="distancemax">Distance maximal (km)</string>
	<string name="time">Temps de vol</string>

	<array name="Continents">
		<item >Europe</item>
		<item >Asie</item>
		<item >Afrique</item>
		<item >Amerique du Nord</item>
		<item >Amerique du Sud</item>
		<item >Océanie</item>
	</array>

	<string name="demo_min_label">Min</string>
	<string name="demo_max_label">Max</string>
	<string name="Categorie">Catégorie</string>
	<string name="Rechercher">Rechercher</string>
	<string name="ChoixContinent">Choix du continent</string>
	<string name="cancel">Annuler</string>
	<string name="ok">Valider</string>
	<string name="continents">Choix des Continents</string>
	<string name="title_activity_result">Résultat de votre recherche</string>
	<string name="error1">Merci d\'indiquer un HUB</string>
</resources>
