<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_height="match_parent"
				android:layout_width="match_parent"
				android:background="@drawable/background"
				android:id="@+id/linear"
				android:orientation="vertical"
				android:weightSum="5">

	<LinearLayout android:id="@+id/linear1" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">


	</LinearLayout>
	<LinearLayout android:id="@+id/linearText" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/AirlinesFinder"
			android:id="@+id/textViewTitle"
			android:layout_gravity="center_vertical"
			android:textSize="25sp"
			android:gravity="center"
			android:textColor="#C00606"
			android:textStyle="bold"/>

	</LinearLayout>
	<LinearLayout android:id="@+id/linear2" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
		<Button
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/AirlinesFinderStart"
			android:id="@+id/button" android:layout_gravity="center_vertical"/>
	</LinearLayout>
	<LinearLayout android:id="@+id/linear3" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
		<Button
			android:id="@+id/button_jeu"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/urlairlines_text"
			android:textSize="15sp"
			android:gravity="center"/>

	</LinearLayout>
	<LinearLayout android:id="@+id/linear4" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
		<Button
			android:id="@+id/button_forum"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/urlairlinesforum_text"
			android:textSize="15sp"
			android:gravity="center"/>
	</LinearLayout>
</LinearLayout>
