<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/background"
				tools:context="thebeginnerapp.fr.airlinesfinder.SettingResearch"
				android:id="@+id/linear"
				android:orientation="vertical"
				android:weightSum="5">

	<LinearLayout android:id="@+id/linear1" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/AirlinesFinder"
			android:id="@+id/textViewTitle"
			android:textSize="25sp"
			android:gravity="center_horizontal|bottom"
			android:textColor="#C00606"
			android:textStyle="bold"/>

	</LinearLayout>
	<ScrollView android:id="@+id/scrollview" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="4">
			<LinearLayout
				android:id="@+id/masterlinear"
				android:layout_width="match_parent"
				android:layout_height="fill_parent"
				android:orientation="vertical"
				android:weightSum="11"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp">
				<LinearLayout android:id="@+id/sublinear1"
							  android:layout_width="match_parent"
							  android:layout_height="0dp"
							  android:orientation="horizontal"
							  android:layout_weight="1"
							  android:weightSum="2"

					>
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="1"
						>
						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:text="@string/hubschoix"
							android:id="@+id/textView"
							android:textSize="15sp"
							android:gravity="center_vertical"
							android:textStyle="bold"
							android:textColor="#000000"/>
								  </LinearLayout>
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="1">
						<AutoCompleteTextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/autoCompleteTextView" android:layout_weight="1"/>
					</LinearLayout>
				</LinearLayout>
				<LinearLayout android:id="@+id/sublinear_airport_choice" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="1">
						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:id="@+id/Airport_list"
							android:textSize="15sp"
							android:gravity="center_vertical"
							android:textStyle="bold"
							android:textColor="#000000"/>
					</LinearLayout>

				</LinearLayout>
				<LinearLayout android:id="@+id/sublinear2" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="1">
						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:text="@string/hubsID"
							android:id="@+id/textView2"
							android:textSize="15sp"
							android:gravity="center_vertical"
							android:textStyle="bold"
							android:textColor="#000000"/>
					</LinearLayout>
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="1">

						<EditText
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:numeric="integer"
							android:id="@+id/editText1" android:layout_weight="1"/>
					</LinearLayout>

				</LinearLayout>
				<LinearLayout android:id="@+id/sublinear3" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="1">
						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:text="@string/Continents"
							android:id="@+id/textView3"
							android:textSize="15sp"
							android:gravity="center_vertical"
							android:textStyle="bold"
							android:textColor="#000000"/>
					</LinearLayout>
				</LinearLayout>
				<LinearLayout android:id="@+id/sublinear3bis" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
					<ScrollView android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="1">

						<!--<ListView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/listView" android:layout_weight="6"/>-->

						<Button android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@string/ChoixContinent"
								android:id="@+id/buttonChoixContinent"
								android:background="@color/accent_material_dark"
								/>
					</ScrollView>

				</LinearLayout>


				<LinearLayout android:id="@+id/sublinear4" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="1">
						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:text="@string/AvionList"
							android:id="@+id/textView4"
							android:textSize="15sp"
							android:gravity="center_vertical"
							android:textStyle="bold"
							android:textColor="#000000"/>
					</LinearLayout>
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="1">

						<Spinner android:id = "@+id/spinnerAvion"
								 android:layout_width="match_parent"
								 android:layout_height="match_parent">

						</Spinner>
					</LinearLayout>

				</LinearLayout>
				<LinearLayout android:id="@+id/sublinear5" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="0.75">
						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:text="@string/distancemax"
							android:id="@+id/textView5"
							android:textSize="15sp"
							android:gravity="center_vertical"
							android:textStyle="bold"
							android:textColor="#000000"/>
					</LinearLayout>
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="0.75">
						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:id="@+id/valuesseekbar"
							android:textSize="15sp"
							android:gravity="center"
							android:textStyle="bold"
							android:textColor="#C00606"/>
					</LinearLayout>
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="1">

						<SeekBar
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/seekBar" android:layout_weight="1"/>
					</LinearLayout>

				</LinearLayout>
				<LinearLayout android:id="@+id/sublinear6" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="0.75">
						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:text="@string/time"
							android:id="@+id/textView6"
							android:textSize="15sp"
							android:gravity="center_vertical"
							android:textStyle="bold"
							android:textColor="#000000"/>
					</LinearLayout>
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="0.75">
						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:id="@+id/valuesseekbartime"
							android:textSize="15sp"
							android:gravity="center"
							android:textStyle="bold"
							android:textColor="#C00606"/>
					</LinearLayout>


				</LinearLayout>
				<LinearLayout android:id="@+id/sublinear7" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
					<LinearLayout android:id="@+id/sublinearSeekBar"
								  android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="1"
								  android:orientation="horizontal">

						<!--<SeekBar
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/seekBartime"
							android:layout_weight="1"
							/>-->
					</LinearLayout>

				</LinearLayout>
				<LinearLayout android:id="@+id/sublinear8" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="0.75">
						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:text="@string/Categorie"
							android:id="@+id/textView7"
							android:textSize="15sp"
							android:gravity="center_vertical"
							android:textStyle="bold"
							android:textColor="#000000"/>
					</LinearLayout>
					<LinearLayout android:layout_width="0dp"
								  android:layout_height="match_parent"
								  android:layout_weight="0.75">
						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:id="@+id/valuesseekcategorie"
							android:textSize="15sp"
							android:gravity="center"
							android:textStyle="bold"
							android:textColor="#C00606"/>
					</LinearLayout>
				</LinearLayout>
				<LinearLayout android:id="@+id/sublinear9" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
					<LinearLayout android:id="@+id/sublinearSeekBarcategorie"
								  android:layout_width="match_parent"
								  android:layout_height="match_parent"
								  android:orientation="horizontal">
					</LinearLayout>
				</LinearLayout>
				<LinearLayout android:id="@+id/sublinear10" android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal" android:layout_weight="1">
					<Button
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:text="@string/Rechercher"
						android:id="@+id/button" android:layout_gravity="center_vertical"
						android:background="@color/accent_material_dark"/>
				</LinearLayout>
			 </LinearLayout>

	</ScrollView>

</LinearLayout>
